[gd_scene format=3 uid="uid://dhgkkjslu63lv"]

[ext_resource type="Script" uid="uid://dunj5jc3omyaw" path="res://scenes/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://bwys233at1lfe" path="res://scenes/level_manager.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://bhka4d3sts6ts" path="res://scenes/enemy_spawner.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://cqdoyb077hkns" path="res://scenes/actor.tscn" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://jsgas4rut0y5" path="res://UI.tscn" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://dy7q8jysmslvg" path="res://scenes/music_manager.tscn" id="6_tefeu"]
[ext_resource type="PackedScene" uid="uid://cbcdl2yqhrhjq" path="res://scenes/you_died_screen.tscn" id="7_o6xl0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tefeu"]
size = Vector2(1922, 391)

[node name="Main" type="Node2D" unique_id=1833633627]
script = ExtResource("1_0wfyh")
player_scene = ExtResource("4_jyhfs")

[node name="UI" parent="." unique_id=192384161 instance=ExtResource("5_tbgi4")]
z_index = 100

[node name="YouDiedScreen" parent="." unique_id=1357783309 instance=ExtResource("7_o6xl0")]
visible = false
z_index = 500

[node name="Actor" parent="." unique_id=542046403 instance=ExtResource("4_jyhfs")]
position = Vector2(995, 484)

[node name="LevelManager" parent="." unique_id=151953731 instance=ExtResource("2_0wfyh")]

[node name="EnemySpawner" parent="." unique_id=1594025064 instance=ExtResource("3_sugp2")]

[node name="Left" type="Marker2D" parent="." unique_id=1065373660]
position = Vector2(-140, 920)

[node name="Right" type="Marker2D" parent="." unique_id=693273484]
position = Vector2(2053, 920)

[node name="StartPos" type="Marker2D" parent="." unique_id=1801226996]
position = Vector2(719, 351)

[node name="MusicManager" parent="." unique_id=1605363832 instance=ExtResource("6_tefeu")]

[node name="Area2D" type="StaticBody2D" parent="." unique_id=52907549]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1631205927]
position = Vector2(961, 195.5)
shape = SubResource("RectangleShape2D_tefeu")

[connection signal="died" from="Actor" to="." method="_on_actor_died"]
[connection signal="hit" from="Actor" to="UI" method="_on_actor_hit"]
[connection signal="mask_changed" from="Actor" to="UI" method="_on_actor_mask_changed"]
[connection signal="middle_ages" from="Actor" to="LevelManager" method="_on_actor_middle_ages"]
[connection signal="noire" from="Actor" to="LevelManager" method="_on_actor_noire"]
[connection signal="puppets" from="Actor" to="LevelManager" method="_on_actor_puppets"]
[connection signal="middle_ages" from="LevelManager" to="." method="_on_level_manager_middle_ages"]
[connection signal="noire" from="LevelManager" to="." method="_on_level_manager_noire"]
[connection signal="puppets" from="LevelManager" to="." method="_on_level_manager_puppets"]
